Deploy container diretory from base-container ,and execute task in parallel.

--- a/kvm_demo/service1/lvs.yml
+++ b/kvm_demo/service1/lvs.yml
@@ -14,11 +14,16 @@
       failed_when: lxc_info.rc not in [0,1]
       changed_when: lxc_info.rc == 1
   roles:
-    - { role: ../lvs-web-dr/roles/create, when: "lxc_info.rc == 1", delegate_to: "{{ lxchost.manager_host }}", site: "{{ pcon }}" }
+#    - { role: ../lvs-web-dr/roles/create, when: "lxc_info.rc == 1", delegate_to: "{{ lxchost.manager_host }}", site: "{{ pcon }}" }
     - { role: ../lvs-web-dr/roles/deploy, when: "lxc_info.rc == 1", site: "{{ pcon }}" }
     - { role: ../lvs-web-dr/roles/lvs_post, site: "{{ pcon }}" }
-    - { role: ../lvs-web-dr/roles/start, site: "{{ pcon }}" }
 
+  post_tasks:
+    - name: start container
+      lxc_container:
+        name: "{{ pcon.container_name }}"
+        state: started
+        
 - hosts: lvs02
   gather_facts: False
   remote_user: root
@@ -35,10 +40,14 @@
       failed_when: lxc_info.rc not in [0,1]
       changed_when: lxc_info.rc == 1
   roles:
-    - { role: ../lvs-web-dr/roles/create, when: "lxc_info.rc == 1", delegate_to: "{{ lxchost.manager_host }}", site: "{{ pcon }}" }
+ #   - { role: ../lvs-web-dr/roles/create, when: "lxc_info.rc == 1", delegate_to: "{{ lxchost.manager_host }}", site: "{{ pcon }}" }
     - { role: ../lvs-web-dr/roles/deploy, when: "lxc_info.rc == 1", site: "{{ pcon }}" }
     - { role: ../lvs-web-dr/roles/lvs_post, site: "{{ pcon }}" }
-    - { role: ../lvs-web-dr/roles/start, site: "{{ pcon }}" }
-
+#    - { role: ../lvs-web-dr/roles/start, site: "{{ pcon }}" }
+  post_tasks:
+    - name: start container
+      lxc_container:
+        name: "{{ pcon.container_name }}"
+        state: started
 
 
