--- a/kvm_demo/service1/web.yml
+++ b/kvm_demo/service1/web.yml
@@ -14,10 +14,16 @@
       failed_when: lxc_info.rc not in [0,1]
       changed_when: lxc_info.rc == 1
   roles:
-    - { role: ../lvs-web-dr/roles/create, when: "lxc_info.rc == 1", delegate_to: "{{ lxchost.manager_host }}", site: "{{ pcon }}" }
+#    - { role: ../lvs-web-dr/roles/create, when: "lxc_info.rc == 1", delegate_to: "{{ lxchost.manager_host }}", site: "{{ pcon }}" }
     - { role: ../lvs-web-dr/roles/deploy, when: "lxc_info.rc == 1", site: "{{ pcon }}" }
     - { role: ../lvs-web-dr/roles/web_post, site: "{{ pcon }}" }
-    - { role: ../lvs-web-dr/roles/start, site: "{{ pcon }}" }
+#    - { role: ../lvs-web-dr/roles/start, site: "{{ pcon }}" }
+
+  post_tasks:
+    - name: start container
+      lxc_container:
+        name: "{{ pcon.container_name }}"
+        state: started
 
 - hosts: web02
   gather_facts: False
@@ -35,10 +41,16 @@
       failed_when: lxc_info.rc not in [0,1]
       changed_when: lxc_info.rc == 1
   roles:
-    - { role: ../lvs-web-dr/roles/create, when: "lxc_info.rc == 1", delegate_to: "{{ lxchost.manager_host }}", site: "{{ pcon }}" }
+#    - { role: ../lvs-web-dr/roles/create, when: "lxc_info.rc == 1", delegate_to: "{{ lxchost.manager_host }}", site: "{{ pcon }}" }
     - { role: ../lvs-web-dr/roles/deploy, when: "lxc_info.rc == 1", site: "{{ pcon }}" }
     - { role: ../lvs-web-dr/roles/web_post, site: "{{ pcon }}" }
-    - { role: ../lvs-web-dr/roles/start, site: "{{ pcon }}" }
+#    - { role: ../lvs-web-dr/roles/start, site: "{{ pcon }}" }
+
+  post_tasks:
+    - name: start container
+      lxc_container:
+        name: "{{ pcon.container_name }}"
+        state: started
 
 
 
