--- a/kvm_demo/lvs-web-dr/roles/deploy/vars/main.yml
+++ b/kvm_demo/lvs-web-dr/roles/deploy/vars/main.yml
@@ -5,4 +5,7 @@ lxc_dir: "{{ lxchost.lxc_dir }}}"
 tmp_archive_dir: "{{ lxchost.tmp_archive_dir }}"
 container_dir: "{{ lxchost.lxc_dir }}/{{ container_name }}"
 
+repo_dir: "{{ manager.repo_dir }}"
+base_container: "{{ site.base_container }}"
+
 personal_conf_dir: "{{ config_dir }}/{{ container_name }}"
