Rename filename and remove unused files.

--- a/kvm_demo/physical/lvshost.yml
+++ b/kvm_demo/physical/lvshost.yml
@@ -1,8 +1,7 @@
-- hosts: lvs
+- hosts: lvshost
   remote_user: root
   gather_facts: False
   roles:
-    - lxchost
     - { role: vlan , vlan: "{{ lvshost.vlan }}" } 
     - lvshost 
     
