--- a/kvm_demo/physical/roles/lvshost/tasks/main.yml
+++ b/kvm_demo/physical/roles/lvshost/tasks/main.yml
@@ -1,5 +1,8 @@
 - name: Load ip_vs modules on host
-  shell: modprobe ip_vs ip_tables
-  ignore_errors: yes
+  modprobe: name=ip_vs state=present
+  
+- name: Load ip_tables modules on host
+  modprobe: name=ip_tables state=present
+  
 - name: port forward enable
   sysctl: name="net.ipv4.ip_forward" value=1 sysctl_set=yes  
