--- a/kvm_demo/physical/roles/vlan/tasks/main.yml
+++ b/kvm_demo/physical/roles/vlan/tasks/main.yml
@@ -22,6 +22,8 @@
     [ ! -f /etc/network/interfaces.d/vlan{{ item.id }} ] && exit 0;
     cp /etc/network/interfaces.d/vlan{{ item.id }} /tmp/vlan{{ item.id }}.bk
   with_items: vlan
+  changed_when: false
+  
   
 - name: create vlan interface and its bridge.
   template: >
@@ -45,6 +47,7 @@
     [ ! -f /tmp/vlan{{ item.id }}.bk ] && exit 0;
     rm /tmp/vlan{{ item.id }}.bk
   with_items: vlan
+  changed_when: false
     
 - name: ifup interface and its brigde
   shell: >
