--- a/kvm_demo/physical/webhost.yml
+++ b/kvm_demo/physical/webhost.yml
@@ -1,8 +1,7 @@
-- hosts: web 
+- hosts: webhost 
   remote_user: root
   gather_facts: False
   roles:
-    - lxchost
     - { role: vlan , vlan: "{{ webhost.vlan }}" } 
     - webhost  
     
