Installing curl will install ca-certificates. This lead to unarchive error which is fixed in Ansible 2.0. For now we don't install curl.

--- a/kvm_demo/image/roles/base/tasks/main.yml
+++ b/kvm_demo/image/roles/base/tasks/main.yml
@@ -13,7 +13,7 @@
       echo "root:password" | chpasswd
       apt-get update
       apt-get -y upgrade
-      apt-get -y install iputils-ping strace vim-tiny tcpdump curl telnet 
+      apt-get -y install iputils-ping strace vim-tiny tcpdump telnet 
       apt-get clean
   environment:
     MIRROR: http://apt.h.ccmp.jp:3142/ftp.us.debian.org/debian
