--- a/kvm_demo/service2/template/weblxc/config
+++ b/kvm_demo/service2/template/weblxc/config
@@ -4,6 +4,7 @@
 
 # Distribution configuration
 lxc.include = /usr/share/lxc/config/debian.common.conf
+lxc.include = /usr/share/lxc/config/debian.userns.conf
 lxc.arch = x86_64
 
 # Container specific configuration
@@ -12,11 +13,12 @@ lxc.utsname = {{ hostname }}
 
 # Network configuration
 lxc.network.type = veth
-lxc.network.flags = up
-lxc.network.link = lbr1
-#lxc.network.ipv4 ={{ site.global_ip }}
-#
-lxc.network.type = veth
-lxc.network.flags = up
 lxc.network.link = lbr{{ service.vlanid }}
+lxc.network.flags = up
+#lxc.network.hwaddr = 00:16:3e:xx:xx:xx
 #lxc.network.ipv4 = {{ site.local_ip }}
+#
+#lxc.network.type = veth
+#lxc.network.link = lbr1
+#lxc.network.flags = up
+#
