--- a/kvm_demo/lvs-web-dr/roles/common_post/handlers/main.yml
+++ b/kvm_demo/lvs-web-dr/roles/common_post/handlers/main.yml
@@ -4,3 +4,7 @@
     state: started
     container_command: |
       systemctl restart network
+
+- name: restart container
+  debug: > 
+    msg="NOTIFY:{{ container_name }} config chenged.Please restart to enable the setting."
