--- a/kvm_demo/service1/site_destory.yml
+++ b/kvm_demo/service1/site_destory.yml
@@ -1,42 +1,11 @@
-- hosts: cluster
+- hosts: service1-all
   gather_facts: False
   remote_user: root
   vars_files:
     - vars/common.yml
     - vars/config.yml
   vars:
-    pcon: "{{ container[contents[service.name]] }}"
+    pcon: "{{ container[contents['service1']] }}"
 
   roles:
     - { role: ../lvs-web-dr/roles/destroy , site: "{{ pcon }}"  }
-
-#- hosts: lvs02
-#  gather_facts: False
-#  remote_user: root
-#  vars_files:
-#    - vars/common.yml
-#    - vars/config.yml
-#
-#  roles:
-#    - { role: ../lvs-web-dr/roles/destroy , site: "{{ lvs.lvs2 }}"  }
-#
-#- hosts: web01
-#  gather_facts: False
-#  remote_user: root
-#  vars_files:
-#    - vars/common.yml
-#    - vars/config.yml
-#   
-#  roles:
-#    - { role: ../lvs-web-dr/roles/destroy , site: "{{ web.web1 }}"  }
-#- hosts: web02
-#  gather_facts: False
-#  remote_user: root
-#  vars_files:
-#   - vars/common.yml
-#   - vars/config.yml
-#   
-#  roles:
-#    - { role: ../lvs-web-dr/roles/destroy , site: "{{ web.web2 }}"  }
-
-
