--- a/kvm_demo/physical/roles/lvshost/tasks/main.yml
+++ b/kvm_demo/physical/roles/lvshost/tasks/main.yml
@@ -6,3 +6,9 @@
   
 - name: port forward enable
   sysctl: name="net.ipv4.ip_forward" value=1 sysctl_set=yes  
+
+- copy: src=../files/{{ item.name }} dest={{ item.name }} mode={{ item.mode }}
+  with_items:
+    - { name: '/etc/network/if-up.d/iptables', mode: '0755' }
+  notify: restart network
+
