--- a/kvm_demo/service2/vars/common.yml
+++ b/kvm_demo/service2/vars/common.yml
@@ -2,14 +2,14 @@ local_archive_dir: /tmp
 config_dir: config
 
 common:
-  global_network: 10.10.1.0
+  global_network: 10.10.20.0
   global_subnet: 24
   local_network: 192.168.10.0
   local_subnet: 24
 
 gateway:
-  ip: 10.10.1.1
-  mac: 52:54:00:11:00:ce
+  ip: 10.10.20.254
+  mac: "52:54:00:11:00:02"
   
 service:
   name: service2
