Networking restart handler fix.

--- a/kvm_demo/lvs-web-dr/roles/lvs_post/handlers/main.yml
+++ b/kvm_demo/lvs-web-dr/roles/lvs_post/handlers/main.yml
@@ -3,7 +3,7 @@
     name: "{{ container_name }}"
     state: started
     container_command: |
-      systemctl restart network
+      systemctl restart networking
 
 - name: restart keepalived
   lxc_container:
