--- a/flat/service2/web1.yml
+++ b/flat/service2/web1.yml
@@ -8,8 +8,8 @@
   vars:
     site: "{{ container.web1 }}"
     container_name: "{{ site.container_name }}"
-#    hostname: "{{ site.hostname | default(site.container_name) }}"
-#    personal_conf_dir: "{{ config_dir }}/{{ container_name }}"    
+    personal_conf_dir: "{{ config_dir }}/{{ container_name }}"
+    container_dir: "{{ lxc_dir }}/{{ container_name }}"
 
 # check whether the container have been deployed already.
   pre_tasks:
