--- a/flat/service1/roles/lvs_post/handlers/main.yml
+++ b/flat/service1/roles/lvs_post/handlers/main.yml
@@ -4,20 +4,23 @@
     state: started
     container_command: |
       systemctl restart networking
-
+  when: lxc_info.stdout.find('RUNNING') != -1
+      
 - name: restart keepalived
   lxc_container:
     name: "{{ container_name }}"
     state: started
     container_command: |
       systemctl restart keepalived
-
+  when: lxc_info.stdout.find('RUNNING') != -1
+  
 - name: restart lvs-setup
   lxc_container:
     name: "{{ container_name }}"
     state: started
     container_command: |
       systemctl restart lvs-setup
+  when: lxc_info.stdout.find('RUNNING') != -1
 
 - name: restart container
   debug: > 
