--- a/flat/service1/roles/web_post/handlers/main.yml
+++ b/flat/service1/roles/web_post/handlers/main.yml
@@ -4,6 +4,6 @@
     state: started
     container_command: |
       systemctl restart web-setup
-
+  when: lxc_info.stdout.find('RUNNING') != -1
       
   
