--- a/flat/physical/roles/lxchost/tasks/main.yml
+++ b/flat/physical/roles/lxchost/tasks/main.yml
@@ -1,14 +1,23 @@
-- copy: src=../files/{{ item.name }} dest={{ item.name }} mode={{ item.mode }}
-  with_items:
-    - { name: '/etc/apt/sources.list', mode: '0644' }
-    - { name: '/etc/apt/preferences', mode: '0644' }
-
+#- copy: src=../files/{{ item.name }} dest={{ item.name }} mode={{ item.mode }}
+#  with_items:
+#    - { name: '/etc/apt/sources.list', mode: '0644' }
+#    - { name: '/etc/apt/preferences', mode: '0644' }#
+#
 - apt: update_cache=yes cache_valid_time=3600
+#- apt: name={{ item }} state=present default_release=stretch
+- apt: name={{ item }} state=present
+  with_items:
+    - python3
+    - libcap2
+    - ca-certificates
+- copy: >
+    src=../../../../package/files/{{ lxcpackage }}
+    dest={{ tmpdir }}/{{ lxcpackage }}
+    
+- apt: deb={{ tmpdir }}/{{ lxcpackage }}
 
 - apt: name={{ item }} state=present 
   with_items:
-    - lxc=1:1.0.7-10 
-    - lxc-dev
     - less
     - bridge-utils
     - python-dev
