add simple version.

--- a/flat/service1_config2/template/lvs/etc/keepalived/keepalived.conf
+++ b/flat/service1_config2/template/lvs/etc/keepalived/keepalived.conf
@@ -11,14 +11,15 @@ vrrp_instance VI {
     auth_pass {{ vrrp.auth_password }}
   }
   virtual_ipaddress {
-    {{ vrrp.global_vip }}/{{ common.global_subnet }} dev eth0  
-    {{ vrrp.local_vip  }}/{{ common.local_subnet  }} dev eth1 
+#    {{ vrrp.global_vip }}/{{ common.global_subnet }} dev eth0  
+    {{ lvs_common.vrrp.vip  }}/{{ common.local_subnet  }} dev eth0 
  }
 }
 
 virtual_server_group VIP0 {   
-        {{ lvscommon.vip }} {{ lvscommon.port }}
+        {{ lvs_common.vip }} {{ lvs_common.port }}
 }
+
 
 virtual_server group VIP0 {   
     delay_loop 6
@@ -26,7 +27,8 @@ virtual_server group VIP0 {
     lvs_method DR
     protocol TCP
 
-    real_server {{ realserver.server1.ip }} {{ realserver.server1.port }} {
+{% for item in groups.web_servers %}
+    real_server {{ item | A | to_con_addr("service.id") }} {{ web_common.port }} {
         weight 1
         inhibit_on_failure
         HTTP_GET {
@@ -37,16 +39,17 @@ virtual_server group VIP0 {
             connect_timeout 3  
         }
     }
+{% endfor %}
 
-    real_server {{ realserver.server2.ip }} {{ realserver.server2.port }} {
-        weight 1
-        inhibit_on_failure
-        HTTP_GET {
-            url {
-              path /index.html 
-              status_code 200  
-            }
-            connect_timeout 3  
-        }
-    }
+#    real_server {{ realserver.server2.ip }} {{ realserver.server2.port }} {
+#        weight 1
+#        inhibit_on_failure
+#        HTTP_GET {
+#            url {
+#              path /index.html 
+#              status_code 200  
+#            }
+#            connect_timeout 3  
+#        }
+#    }
 }
