--- a/flat/service1_config2/vars/var_config.yml
+++ b/flat/service1_config2/vars/var_config.yml
@@ -1,47 +1,48 @@
-config_dest: ../service1/config
+config_dest: ../service10/config
 
 common:
-  global_network: 10.10.10.0
-  global_subnet: 24
-  local_network: 192.168.10.0
-  local_subnet: 24
+#  global_network: 10.10.0.0
+#  global_subnet: 16
+  local_network: 10.10.0.0
+  local_subnet: 16
 
 gateway:
-  ip: 10.10.10.254
-  mac: "52:54:00:11:00:02"
+  ip: 10.10.4.1
+#  mac: "52:54:00:11:00:02"
     
-vrrp:
-  global_vip: 10.10.10.10
-  local_vip: 192.168.10.10
-  auth_password: password
-
-lvscommon:
-  vip: 10.10.100.1
+lvs_common:
+#  global_vip: 10.10.10.10
+  vrrp:
+    vip: 10.10.4.10
+    auth_password: password
+  vip: 10.254.10.1
   port: 80
-  ip: "{{ vrrp.local_vip }}"
-  
-#Web(real server)
-realserver:
-  subnet: 24
-  server1:
-    ip: 192.168.10.51
-    port: 80
-  server2:
-    ip: 192.168.10.52
-    port: 80
+
+web_common:
+  port: 80
     
-personal_config:
-  lvs1:
-    global_ip: 10.10.10.11/24
-    local_ip: 192.168.10.11/24
-  lvs2:
-    global_ip: 10.10.10.12/24
-    local_ip: 192.168.10.12/24
+#Web(real server)
+#realserver:
+#  subnet: 24
+#  server1:
+#    ip: 192.168.10.51
+#    port: 80
+#  server2:
+#    ip: 192.168.10.52
+#    port: 80
+    
+#personal_config:
+#  lvs1:
+#    global_ip: 10.10.10.11/24
+#    local_ip: 192.168.10.11/24
+#  lvs2:
+#    global_ip: 10.10.10.12/24
+#    local_ip: 192.168.10.12/24
 #Web
 #web:
-  web1:
-    local_ip: "{{ realserver.server1.ip }}/{{ realserver.subnet }}"
-    local_port: "{{ realserver.server1.port }}"
-  web2:
-    local_ip: "{{ realserver.server2.ip }}/{{ realserver.subnet }}"
-    local_port: "{{ realserver.server2.port }}"
+#  web1:
+#    local_ip: "{{ realserver.server1.ip }}/{{ realserver.subnet }}"
+#    local_port: "{{ realserver.server1.port }}"
+#  web2:
+#    local_ip: "{{ realserver.server2.ip }}/{{ realserver.subnet }}"
+#    local_port: "{{ realserver.server2.port }}"
