--- a/simple/config/template/lvs/etc/keepalived/keepalived.conf
+++ b/simple/config/template/lvs/etc/keepalived/keepalived.conf
@@ -11,7 +11,6 @@ vrrp_instance VI {
     auth_pass {{ lvs_common.vrrp.auth_password }}
   }
   virtual_ipaddress {
-#{#    {{ vrrp.global_vip }}/{{ common.global_subnet }} dev eth0  #}
     {{ lvs_common.vrrp.vip  }}/16 dev eth0 
  }
 }
@@ -27,8 +26,8 @@ virtual_server group VIP0 {
     lvs_method DR
     protocol TCP
 
-{% for item in groups.web_servers %}
-    real_server {{ item | A | to_con_addr(service.id) }} {{ web_common.port }} {
+{% for item in groups["web-servers"] %}
+    real_server {{ item | A | to_con_addr(service.id) }} {{ web_common.port }} { 
         weight 1
         inhibit_on_failure
         HTTP_GET {
@@ -39,17 +38,5 @@ virtual_server group VIP0 {
             connect_timeout 3  
         }
     }
-{% endfor %}
-
-#{#    real_server {{ realserver.server2.ip }} {{ realserver.server2.port }} { #}
-#        weight 1
-#        inhibit_on_failure
-#        HTTP_GET {
-#            url {
-#              path /index.html 
-#              status_code 200  
-#            }
-#            connect_timeout 3  
-#        }
-#    }
+{% endfor %} 
 }
