--- a/simple/config/lvs.yml
+++ b/simple/config/lvs.yml
@@ -1,4 +1,4 @@
-- hosts: lvs_servers
+- hosts: lvs-servers
   connection: local
   gather_facts: False
   remote_user: root
@@ -8,16 +8,11 @@
     - vars/template.yml
 
   vars:
-    #{# site: "{{ personal_config[cname] }}" #}
-    #{# pcon: "{{ container[cname] }}" #}
-    #{# container_name: "{{ pcon.container_name }}" #}
-    #{# hostname: "{{ pcon.hostname | default(container_name) }}" #}
-
     def_cname: "{{ cname }}-{{service.name}}"
     host_address: "{{ inventory_hostname | A }}" 
     container_address: "{{ host_address | to_con_addr(service.id) }}"
-    container_name: "{{ container[cname].container_name | default(def_cname)}}"
-    hostname: "{{ container[cname].hostname | default(container_name) }}"
+    container_name: "{{ container_name_custom[cname] | default(def_cname)}}"
+    hostname: "{{ container_hostname_custom[cname] | default(container_name) }}"
     
   pre_tasks:
     - name: Create config directory
