--- a/simple/config/vars/config.yml
+++ b/simple/config/vars/config.yml
@@ -8,25 +8,23 @@ service:
 default_base_container:
   lvs: lvs-v1-0
   web: web-v1-0
-  
-container:
-#Lvs
-  lvs1:
-#    base_container: lvs-v1-0
-#    container_name: lvs1-s1
-  lvs2:
-#    base_container: lvs-v1-0
-#    container_name: lvs2-s1
-#Web
-  web1:
-#    base_container: web-v1-0
-#    container_name: web1-s1
-#    hostname: web1
-  web2:
-#    base_container: web-v1-0
-#    container_name: web2-s1
-#    hostname: web2
-  web3:
 
+base_container_custom:
+#  lvs1:
+#  lvs2:
+#  web1:
+#  web2:
+      
+container_name_custom:
+#  lvs1:
+#  lvs2:
+#  web1:
+#  web2:
+    
+container_hostname_custom:
+#  lvs1:
+#  lvs2:
+#  web1:
+#  web2:
 
    
