--- a/simple/service10/config/lvs2-service10/rootfs/etc/keepalived/keepalived.conf
+++ b/simple/service10/config/lvs2-service10/rootfs/etc/keepalived/keepalived.conf
@@ -11,7 +11,7 @@ vrrp_instance VI {
     auth_pass password
   }
   virtual_ipaddress {
-#    10.10.4.10/16 dev eth0 
+    10.10.4.10/16 dev eth0 
  }
 }
 
@@ -26,7 +26,7 @@ virtual_server group VIP0 {
     lvs_method DR
     protocol TCP
 
-    real_server 10.10.0.50 80 {
+    real_server 10.10.0.50 80 { 
         weight 1
         inhibit_on_failure
         HTTP_GET {
@@ -37,7 +37,7 @@ virtual_server group VIP0 {
             connect_timeout 3  
         }
     }
-    real_server 10.10.0.51 80 {
+    real_server 10.10.0.51 80 { 
         weight 1
         inhibit_on_failure
         HTTP_GET {
@@ -48,15 +48,16 @@ virtual_server group VIP0 {
             connect_timeout 3  
         }
     }
-
-##        weight 1
-#        inhibit_on_failure
-#        HTTP_GET {
-#            url {
-#              path /index.html 
-#              status_code 200  
-#            }
-#            connect_timeout 3  
-#        }
-#    }
+    real_server 10.10.0.52 80 { 
+        weight 1
+        inhibit_on_failure
+        HTTP_GET {
+            url {
+              path /index.html 
+              status_code 200  
+            }
+            connect_timeout 3  
+        }
+    }
+ 
 }
