--- a/simple/service10/roles/deploy/vars/main.yml
+++ b/simple/service10/roles/deploy/vars/main.yml
@@ -2,8 +2,8 @@
 #{# base_container: "{{ site.base_container }}" #}
 #{# hostname: "{{ site.hostname | default(site.container_name) }}" #}
 
-repo_dir: "{{ manager.repo_dir }}"
+#{# repo_dir: "{{ manager.repo_dir }}" #}
 
-container_dir: "{{ lxc_dir }}/{{ container_name }}"
+#{# container_dir: "{{ lxc_dir }}/{{ container_name }}" #}
 
-personal_conf_dir: "{{ config_dir }}/{{ container_name }}"
+#{# personal_conf_dir: "{{ config_dir }}/{{ container_name }}" #}
