--- a/simple/service10/web.yml
+++ b/simple/service10/web.yml
@@ -1,22 +1,21 @@
 ---
-- hosts: web_servers
+- hosts: web-servers
   gather_facts: False
   remote_user: root
 
   vars_files:
     - config/config.yml
   vars:
-    #{# site: "{{ container[cname] }}" #}
-    #{# container_name: "{{ site.container_name }}" #}
-    #{# Epersonal_conf_dir: "{{ config_dir }}/{{ container_name }}" #}
-    #{# container_dir: "{{ lxc_dir }}/{{ container_name }}" #}
-
     def_cname: "{{ cname }}-{{service.name}}"
     host_address: "{{ inventory_hostname | A }}" 
     container_address: "{{ host_address | to_con_addr(service.id) }}"
-    container_name: "{{ container[cname].container_name | default(def_cname)}}"
-    hostname: "{{ container[cname].hostname | default(container_name) }}"
-    base_container: "{{ container[cname].base_container | default(default_base_container.web) }}"
+    container_name: "{{ container_name_custom[cname] | default(def_cname)}}"
+    hostname: "{{ container_hostname_custom[cname] | default(container_name) }}"
+    base_container: "{{ base_container_custom[cname] | default(default_base_container.web) }}"
+    repo_dir: "{{ manager.repo_dir }}"
+    container_dir: "{{ lxc_dir }}/{{ container_name }}"
+    personal_conf_dir: "{{ config_dir }}/{{ container_name }}"
+    
 # check whether the container have been deployed already.
   pre_tasks:
     - shell: lxc-info -s -H -n {{ container_name }}
