--- a/simple/config/roles/config/tasks/main.yml
+++ b/simple/config/roles/config/tasks/main.yml
@@ -1,31 +1,32 @@
 - name: Create root directory
-  file: path={{ config_root }} state=directory
+  file: path={{ config_root }} state=directory recurse=yes
     
-#- name: Create configure file root directories
-#  file: path={{ config_root }}/rootfs state=directory
-
+- set_fact:
+    conf_template: "{{ conf.template | default ({}) }}"
+    conf_copyonly: "{{ conf.copyonly | default ({}) }}"
+    
 - name: Create diretory tree 
   file: >
     path={{ config_root }}/{{ item.path | dirname }}
     state=directory
     recurse=yes   
   with_items:
-    - "{{ conf.template.file }}"
-    - "{{ conf.copyonly.file }}"
-  when: item.path | default(false)
+    - "{{ conf_template.file | default([]) }}"
+    - "{{ conf_copyonly.file | default([]) }}"
+  when: item.path 
 
 - name: Create configuration files from template.
   template: > 
-    src={{ conf.template.src_dir }}/{{ item.src | default(item.path)  }}
+    src={{ conf_template.src_dir }}/{{ item.src | default(item.path)  }}
     dest={{ config_root }}/{{ item.path }}
     mode={{ item.mode | default(def_perm.fmode) }}
-  with_items: conf.template.file
+  with_items: "{{ conf_template.file | default([]) }}"
   when: item.path | default(false) and item.copy | default(true) 
 
 - name: Copy configuration file only. 
   copy: > 
-    src={{ conf.copyonly.src_dir }}/{{ item.src | default(item.path)  }}
+    src={{ conf_copyonly.src_dir }}/{{ item.src | default(item.path)  }}
     dest={{ config_root }}/{{ item.path }}
     mode={{ item.mode | default(def_perm.fmode) }}
-  with_items: conf.copyonly.file
+  with_items: "{{ conf_copyonly.file | default([]) }}"
   when: item.path | default(false) and item.copy | default(true) 
