--- a/physical/physical/roles/lvshost/tasks/main.yml
+++ b/physical/physical/roles/lvshost/tasks/main.yml
@@ -7,7 +7,7 @@
 - name: port forward enable
   sysctl: name="net.ipv4.ip_forward" value=1 sysctl_set=yes  
 
-- copy: src=../files/{{ item.name }} dest={{ item.name }} mode={{ item.mode }}
+- copy: src=files/lvshost/{{ item.name }} dest={{ item.name }} mode={{ item.mode }}
   with_items:
     - { name: '/etc/network/if-up.d/iptables', mode: '0755' }
   notify: restart network
